# MPAGS-Code

./: .clang-format  .gitignore  LICENSE  README.md  mpags-cipher.cpp
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  README.md  mpags-cipher.cpp
src/Documentation/: CMakeLists.txt  Doxyfile.in
src/MPAGSCipher/: Alphabet.hpp  CMakeLists.txt  CaesarCipher.cpp  CaesarCipher.hpp  Cipher.hpp  CipherFactory.cpp  CipherFactory.hpp  CipherMode.hpp  CipherType.hpp  PlayfairCipher.cpp  PlayfairCipher.hpp  ProcessCommandLine.cpp  ProcessCommandLine.hpp  RunCaesarCipher.cpp  RunCaesarCipher.hpp  TransformChar.cpp  TransformChar.hpp  VigenereCipher.cpp  VigenereCipher.hpp
src/Testing/: CMakeLists.txt  testCaesarCipher.cpp  testCatch.cpp  testCiphers.cpp  testPlayfairCipher.cpp  testProcessCommandLine.cpp  testTransformChar.cpp  testVigenereCipher.cpp
